force-app/main/default/objects/CS_School_PermissionSet_Mapping__mdt.object
<CustomObject>
    <description>Stores the Schools and it corresponding Permission sets for the Student and Caretaker for the US # 123096</description>
    <fields>
        <fullName>Caretaker_PSet__c</fullName>
        <description>ADO # 130549 - (Placeholder KBA Scenarios)
Used to Store the Caretaker Permission Set</description>
        <label>Caretaker PermSet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <description>ADO # 130549 - (Placeholder KBA Scenarios)
Used to Store the School Name</description>
        <label>School Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_PSet__c</fullName>
        <description>ADO # 130549 - (Placeholder KBA Scenarios)
Used to Store the Student Permission Set</description>
        <label>Student PermSet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CS_School_PermissionSet_Mappings</label>
    <pluralLabel>CS_School_PermissionSet_Mappings</pluralLabel>
</CustomObject>